; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/comedi/drivers/extr_ni_mio_common.c_pack_mb88341.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/comedi/drivers/extr_ni_mio_common.c_pack_mb88341.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i32*)* @pack_mb88341 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pack_mb88341(i32 %0, i32 %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i32* %2, i32** %6, align 8
  %7 = load i32, i32* %4, align 4
  %8 = add nsw i32 %7, 1
  store i32 %8, i32* %4, align 4
  %9 = load i32, i32* %4, align 4
  %10 = and i32 %9, 1
  %11 = shl i32 %10, 11
  %12 = load i32, i32* %4, align 4
  %13 = and i32 %12, 2
  %14 = shl i32 %13, 9
  %15 = or i32 %11, %14
  %16 = load i32, i32* %4, align 4
  %17 = and i32 %16, 4
  %18 = shl i32 %17, 7
  %19 = or i32 %15, %18
  %20 = load i32, i32* %4, align 4
  %21 = and i32 %20, 8
  %22 = shl i32 %21, 5
  %23 = or i32 %19, %22
  %24 = load i32, i32* %5, align 4
  %25 = and i32 %24, 255
  %26 = or i32 %23, %25
  %27 = load i32*, i32** %6, align 8
  store i32 %26, i32* %27, align 4
  ret i32 12
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
